2004-07-09  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* testsuite/threads/Makefile.am:
	* testsuite/threads/threadg.c:
	  added test to check if problem when removing all elements from a
	  GstThread before setting GstThread state to NULL

2004-07-09  Thomas Vander Stichele  <thomas (at) apestaart (dot) org>

	* docs/gst/tmpl/gstelement.sgml:
	* docs/gst/tmpl/gsttypes.sgml:
	* gst/gstbin.c: (gst_bin_change_state):
	* gst/gstelement.c: (gst_element_set_state),
	(gst_element_change_state):
	  rework so that for bins we try to set the state on all children
	  as well even if the bin is in the correct state already.
	  change while to do so at least one iteration is done.
	  For regular elements, we fall back to the previous behaviour for
	  now since we first need a new plugins release.
	* testsuite/states/parent.c: (main):
	  test for this case
	  Fixes #123774

2004-07-09  Thomas Vander Stichele  <thomas (at) apestaart (dot) org>

	* gst/gstqueue.c: (gst_queue_class_init), (gst_queue_finalize),
	(gst_queue_chain), (gst_queue_get), (gst_queue_handle_src_event),
	(gst_queue_release_locks), (gst_queue_change_state),
	(gst_queue_set_property):
	  add proper lock debugging.  Change dispose to finalize, since
	  we're freeing mutexes and other stuff which should happen only once.

2004-07-09  Thomas Vander Stichele  <thomas (at) apestaart (dot) org>

	* docs/gst/tmpl/gstelement.sgml:
	* docs/gst/tmpl/gstplugin.sgml:
	* docs/gst/tmpl/gsttypes.sgml:
	* docs/pwg/building-state.xml:
	* gst/elements/gstfakesrc.c: (gst_fakesrc_change_state):
	* gst/gstelement.c: (gst_element_change_state):
	* gst/gstthread.c: (gst_thread_change_state):
	  catch wrong state changes in element base class.

2004-07-09  Thomas Vander Stichele  <thomas (at) apestaart (dot) org>

	* gst/gstinfo.h:
	  clean up layout a little.

2004-07-09  Thomas Vander Stichele  <thomas (at) apestaart (dot) org>

	* configure.ac:
	* testsuite/Makefile.am:
	* testsuite/states/Makefile.am: